<resources>
    <string name="app_name">Countries in Asia</string>
    <string name="search_country">Search Country</string>
    <string name="india">INDIA</string>
    <string name="name">name</string>
    <string name="not_available">Not Available</string>
    <string name="capital">Capital</string>
    <string name="null_">---</string>
    <string name="region">Region</string>
    <string name="subregion">Subregion</string>
    <string name="languages">Languages</string>
    <string name="borders">Borders</string>
    <string name="population">Population</string>
</resources>